welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:4: error: not found: value gatMondeLargeur
    while (x!=gatMondeLargeur()-1){
              ^